# datapipelineNews2RAG

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: pipeline.yaml
configs/flink/: flink-conf.yaml
configs/kafka/: kafka.env
configs/rag/: rag.yaml
configs/scrapers/: sources.yaml
deployment/k8s/: README.md
docs/: SECURITY.md  api.md  architecture.md  deployment.md
docs/diagrams/: ascii.txt
infra/flink/: Dockerfile
infra/flink-job/: Dockerfile  Dockerfile.bak  requirements.txt
infra/prometheus/: prometheus.yml
infra/rag/: Dockerfile
infra/scrapers/: Dockerfile
scripts/: produce_sample.sh  run_pipeline.sh  seed_topics.sh  setup.sh
src/common/: config.py  decorators.py  exceptions.py  logging.py
src/pipeline/: builder.py  flink_job.py  orchestrator.py
src/processors/: base.py
src/processors/embeddings/: base.py  factory.py  openai_embedder.py  sentence_transformers_embedder.py
src/processors/sinks/: base.py  qdrant_sink.py
src/processors/transformations/: chunking.py  cleaning.py  deduplication.py
src/producers/: kafka_producer.py
src/rag/: api.py  factory.py  generator.py  retriever.py  service.py
src/schemas/: models.py
src/schemas/avro/: news_embedded.avsc  news_raw.avsc
src/scrapers/: base.py  factory.py  main.py
src/scrapers/sources/: rss_source.py
src/scrapers/strategies/: html.py  rss.py
tests/e2e/: test_pipeline_e2e.py
tests/integration/: test_qdrant_sink.py
tests/unit/: test_chunking.py  test_cleaning.py  test_core_components.py  test_embedding_factory.py  test_factory.py  test_parsing_strategies.py  test_rag_components.py  test_rag_service.py
