[project]
name = "news-rag-pipeline"
version = "0.1.0"
description = "Real-time news ingestion and RAG pipeline with Kafka (KRaft) and PyFlink."
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.4.0",
  "pyflink>=1.18.0",
  "qdrant-client>=1.10.0",
  "sentence-transformers>=3.0.0",
  "openai>=1.35.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "feedparser>=6.0.11",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "tenacity>=8.4.0",
  "structlog>=24.2.0",
  "prometheus-client>=0.20.0",
  "avro-python3>=1.11.0",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "testcontainers[kafka,qdrant]>=4.5.0",
  "respx>=0.21.0",
  "types-pyyaml"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP","S","SIM","N","D"]
ignore = ["D104","D100","D107"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require Qdrant/Kafka running)",
    "e2e: End-to-end tests (require full Docker Compose stack)",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
